syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

package ds_project;


message DsProjectBean {

     int32 id=1 ;
     optional string name=2 ;
     int64 code=3 ;
     optional string description=4 ;
     optional int32 user_id=5 ;
     optional int32  flag=6 ;
     optional string  create_time=7 ;
     optional string  update_time=8 ;
}


// Generated according to https://cloud.google.com/apis/design/standard_methods
service DsProjectBeanService {
  rpc ListDsProjectBeans(ListDsProjectBeansRequest) returns (ListDsProjectBeansResponse) {
    option (google.api.http) = {
      get: "/v1alpha1/DsProjectBeans"
    };
  }

  rpc GetDsProjectBean(GetDsProjectBeanRequest) returns (DsProjectBean) {
    option (google.api.http) = {
      get: "/v1alpha1/{name=DsProjectBeans/*}"
    };
  }

  rpc CreateDsProjectBean(CreateDsProjectBeanRequest) returns (DsProjectBean) {
    option (google.api.http) = {
      post: "/v1alpha1/DsProjectBeans"
      body: "DsProjectBean"
    };
  }

  rpc UpdateDsProjectBean(UpdateDsProjectBeanRequest) returns (DsProjectBean) {
    option (google.api.http) = {
      patch: "/v1alpha1/{DsProjectBean.name=DsProjectBeans/*}"
      body: "DsProjectBean"
    };
  }

  rpc DeleteDsProjectBean(DeleteDsProjectBeanRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1alpha1/{name=DsProjectBeans/*}"
    };
  }
}

// message DsProjectBean {
// ! This should be defined elsewhere
// }

message ListDsProjectBeansRequest {


  // The maximum number of items to return.
  int32 page_size = 1;

 int32 page_num = 2;
}

message ListDsProjectBeansResponse {
  // The field name should match the noun "DsProjectBean" in the method name.
  // There will be a maximum number of items returned based on the page_size field in the request.
  repeated DsProjectBean DsProjectBeans = 1;

  // Token to retrieve the next page of results, or empty if there are no more results in the list.
  string next_page_token = 2;
}

message GetDsProjectBeanRequest {
  // The field will contain name of the resource requested.
  string name = 1;
}

message CreateDsProjectBeanRequest {
  // The parent resource name where the DsProjectBean is to be created.
  string parent = 1;

  // The DsProjectBean id to use for this DsProjectBean.
  string DsProjectBean_id = 2;

  // The DsProjectBean resource to create.
  // The field name should match the Noun in the method name.
  DsProjectBean DsProjectBean = 3;
}

message UpdateDsProjectBeanRequest {
  // The DsProjectBean resource which replaces the resource on the server.
  DsProjectBean DsProjectBean = 1;

  // The update mask applies to the resource. For the `google.protobuf.FieldMask` definition,
  // see https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#google.protobuf.FieldMask
  google.protobuf.FieldMask update_mask = 2;
}

message DeleteDsProjectBeanRequest {
  // The resource name of the DsProjectBean to be deleted.
  string name = 1;
}
